--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               <div class="work-links">
                 <a href="https://jaypatel.solutions" target="_blank" rel="noopener" class="link">Live</a>
 
-                <a href="https://github.com/Jayy0906" target="_blank" rel="noopener" title="Source code">
+                <a href="https://github.com/Jayy0906/Portfolio" target="_blank" rel="noopener" title="Source code">
                   <img src="assets/images/social-links/github.svg" alt="GitHub" loading="lazy" />
                 </a>
               </div>
