--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               <div class="work-links">
                 <a href="https://digicley.com" target="_blank" rel="noopener" class="link">Live</a>
 
-                <a href="https://github.com/Jayy0906" target="_blank" rel="noopener" title="Source code">
+                <a href="https://github.com/Jayy0906/Digicley" target="_blank" rel="noopener" title="Source code">
                   <img src="assets/images/social-links/github.svg" alt="GitHub" loading="lazy" />
                 </a>
               </div>
